--- a/Pj_1.uproject
+++ b/Pj_1.uproject
@@ -25,6 +25,21 @@
 				"Win64",
 				"Mac"
 			]
+		},
+		{
+			"Name": "DatasmithCADImporter",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win64"
+			]
+		},
+		{
+			"Name": "DatasmithFBXImporter",
+			"Enabled": true
+		},
+		{
+			"Name": "DatasmithGLTFImporter",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
