--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -171,10 +171,10 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.00
 MaterialInstanceConstant=
 
 [EditorStartup]
-LastLevel=/Game/demo
+LastLevel=/Game/VRTemplate/Maps/VRTemplateMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailPropertyExpansion]
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
