Michael inclass ver.

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -175,7 +175,7 @@ MaterialInstanceConstant=
 LastLevel=/Game/demo
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailPropertyExpansion]
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -949,11 +949,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/Document/Unreal Projects/Pj_1/Content
+UNR=F:/Pj_1/Content
 BRUSH=D:/Document/Unreal Projects/Pj_1/Content/
 FBX=D:/Document/Unreal Projects/Pj_1/Content/
 FBXAnim=D:/Document/Unreal Projects/Pj_1/Content/
-GenericImport=E:/Monash/Y2/S1/MDC5320 - Multimedia design studio 3/group
+GenericImport=F:
 GenericExport=D:/Document/Unreal Projects/Pj_1/Content/
 GenericOpen=D:/Document/Unreal Projects/Pj_1/Content/
 GenericSave=D:/Document/Unreal Projects/Pj_1/Content/
@@ -1987,9 +1987,52 @@ DirectLinkTest.TimeStamp=2023.03.10-20.35.31
 DirectLinkTest.LastCompileMethod=Unknown
 DatasmithC4DTranslator.TimeStamp=2023.03.10-20.34.57
 DatasmithC4DTranslator.LastCompileMethod=Unknown
+CADLibrary.TimeStamp=2023.03.09-23.08.49
+CADLibrary.LastCompileMethod=Unknown
+DatasmithCADTranslator.TimeStamp=2023.03.09-23.08.49
+DatasmithCADTranslator.LastCompileMethod=Unknown
+CADTools.TimeStamp=2023.03.09-23.08.49
+CADTools.LastCompileMethod=Unknown
+DatasmithOpenNurbsTranslator.TimeStamp=2023.03.09-23.08.50
+DatasmithOpenNurbsTranslator.LastCompileMethod=Unknown
+DatasmithDispatcher.TimeStamp=2023.03.09-23.08.49
+DatasmithDispatcher.LastCompileMethod=Unknown
+CADInterfaces.TimeStamp=2023.03.09-23.08.49
+CADInterfaces.LastCompileMethod=Unknown
+DatasmithWireTranslator2020.TimeStamp=2023.03.09-23.08.50
+DatasmithWireTranslator2020.LastCompileMethod=Unknown
+DatasmithWireTranslator2021_3.TimeStamp=2023.03.09-23.08.50
+DatasmithWireTranslator2021_3.LastCompileMethod=Unknown
+DatasmithWireTranslator2022.TimeStamp=2023.03.09-23.08.50
+DatasmithWireTranslator2022.LastCompileMethod=Unknown
+DatasmithWireTranslator2022_1.TimeStamp=2023.03.09-23.08.50
+DatasmithWireTranslator2022_1.LastCompileMethod=Unknown
+DatasmithWireTranslator2022_2.TimeStamp=2023.03.09-23.08.50
+DatasmithWireTranslator2022_2.LastCompileMethod=Unknown
+DatasmithWireTranslator2023_0.TimeStamp=2023.03.09-23.08.50
+DatasmithWireTranslator2023_0.LastCompileMethod=Unknown
+DatasmithWireTranslator2023_1.TimeStamp=2023.03.09-23.08.50
+DatasmithWireTranslator2023_1.LastCompileMethod=Unknown
+ParametricSurfaceExtension.TimeStamp=2023.03.09-23.08.50
+ParametricSurfaceExtension.LastCompileMethod=Unknown
+ParametricSurface.TimeStamp=2023.03.09-23.08.50
+ParametricSurface.LastCompileMethod=Unknown
+CADKernelSurface.TimeStamp=2023.03.09-23.08.49
+CADKernelSurface.LastCompileMethod=Unknown
+DatasmithPLMXMLTranslator.TimeStamp=2023.03.09-23.08.50
+DatasmithPLMXMLTranslator.LastCompileMethod=Unknown
+DatasmithGLTFTranslator.TimeStamp=2023.03.09-23.08.55
+DatasmithGLTFTranslator.LastCompileMethod=Unknown
+DatasmithVREDTranslator.TimeStamp=2023.03.09-23.08.54
+DatasmithVREDTranslator.LastCompileMethod=Unknown
+DatasmithDeltaGenTranslator.TimeStamp=2023.03.09-23.08.54
+DatasmithDeltaGenTranslator.LastCompileMethod=Unknown
+DatasmithFBXTranslator.TimeStamp=2023.03.09-23.08.54
+DatasmithFBXTranslator.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=D:/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=F:/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [DetailCategoriesAdvanced]
