--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -158,7 +158,6 @@ MRUItem1=/Game/demo
 MRUItem2=/Game/VRTemplate/Maps/VRTemplateMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -533,16 +532,16 @@ FbxScene_house_1_C.Tick=True
 FbxScene_house_1_C.WorldPartition=True
 FbxScene_house_1_C.Events=True
 DatasmithImportOptions.Process=True
-DatasmithSceneActor.TransformCommon=True
+DatasmithSceneActor.TransformCommon=False
 DatasmithSceneActor.Datasmith=True
-DatasmithSceneActor.Rendering=True
-DatasmithSceneActor.Replication=True
-DatasmithSceneActor.Collision=True
-DatasmithSceneActor.HLOD=True
-DatasmithSceneActor.Physics=True
-DatasmithSceneActor.Networking=True
-DatasmithSceneActor.Input=True
-DatasmithSceneActor.Actor=True
+DatasmithSceneActor.Rendering=False
+DatasmithSceneActor.Replication=False
+DatasmithSceneActor.Collision=False
+DatasmithSceneActor.HLOD=False
+DatasmithSceneActor.Physics=False
+DatasmithSceneActor.Networking=False
+DatasmithSceneActor.Input=False
+DatasmithSceneActor.Actor=False
 Actor.Rendering=True
 Actor.Replication=True
 Actor.Collision=True
@@ -562,6 +561,17 @@ PostProcessVolume.BrushSettings=False
 PostProcessVolume.HLOD=False
 PostProcessVolume.Networking=False
 PostProcessVolume.Actor=False
+LevelInstance.Level Edit=True
+LevelInstance.TransformCommon=True
+LevelInstance.Level=True
+LevelInstance.Rendering=True
+LevelInstance.Replication=True
+LevelInstance.Collision=True
+LevelInstance.HLOD=True
+LevelInstance.Physics=True
+LevelInstance.Networking=True
+LevelInstance.Input=True
+LevelInstance.Actor=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -576,7 +586,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/modi/ancient
+ContentBrowserDrawer.SelectedPaths=/Game/maerial
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -593,14 +603,14 @@ ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
 ContentBrowserTab1.CollectionAreaExpanded=False
 ContentBrowserTab1.FavoritesSearchAreaExpanded=False
-ContentBrowserTab1.PathSearchAreaExpanded=False
+ContentBrowserTab1.PathSearchAreaExpanded=True
 ContentBrowserTab1.CollectionSearchAreaExpanded=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.150000006
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Megascans/Surfaces/Limestone_ue2pfetc
+ContentBrowserTab1.SelectedPaths=/Game/maerial
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -609,51 +619,51 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [PlacementMode]
-RecentlyPlaced=/Game/maerial/M_Water_Lake1.M_Water_Lake1;
-RecentlyPlaced=/Game/modi/gate/gate.gate;
-RecentlyPlaced=/Game/maerial/m_rooftop_Inst.m_rooftop_Inst;
 RecentlyPlaced=/Game/maerial/m_rooftop1.m_rooftop1;
+RecentlyPlaced=/Game/maerial/m_rooftop2.m_rooftop2;
+RecentlyPlaced=/Game/maerial/M_Wood_Walnut.M_Wood_Walnut;
+RecentlyPlaced=/Game/maerial/m_wall_paint.m_wall_paint;
+RecentlyPlaced=/Game/maerial/window_paper.window_paper;
+RecentlyPlaced=/Game/maerial/M_Wood_Pine.M_Wood_Pine;
+RecentlyPlaced=/Game/maerial/m_rooftop.m_rooftop;
+RecentlyPlaced=/Game/maerial/MI_Limestone_ue2pfetc_2K.MI_Limestone_ue2pfetc_2K;
+RecentlyPlaced=/Game/maerial/m_paint.m_paint;
 RecentlyPlaced=/Game/maerial/m_wall_brick_Inst.m_wall_brick_Inst;
+RecentlyPlaced=/Game/demo.demo;
+RecentlyPlaced=/Game/modi/gate/gate.gate;
+RecentlyPlaced=/Game/maerial/M_Water_Lake1.M_Water_Lake1;
+RecentlyPlaced=/Game/maerial/m_rooftop_Inst.m_rooftop_Inst;
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_19
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
-RecentlyPlaced=/Game/maerial/MI_Limestone_ue2pfetc_2K.MI_Limestone_ue2pfetc_2K;
 RecentlyPlaced=/Game/Megascans/Surfaces/Limestone_ue2pfetc/MI_Limestone_ue2pfetc_2K.MI_Limestone_ue2pfetc_2K;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Orange_tibhfezva/S_Orange_tibhfezva_lod3.S_Orange_tibhfezva_lod3;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Orange_tibhfezva/MI_Orange_tibhfezva_2K.MI_Orange_tibhfezva_2K;
 RecentlyPlaced=/Game/Megascans/3D_Plants/White_Ramping_Fumitory_ti4efc3ia/S_White_Ramping_Fumitory_ti4efc3ia_Var3_lod1.S_White_Ramping_Fumitory_ti4efc3ia_Var3_lod1;
-RecentlyPlaced=/Game/modi/pop_up_store/pop_up_store.pop_up_store;
-RecentlyPlaced=/Game/maerial/m_road_brick_Inst3.m_road_brick_Inst3;
-RecentlyPlaced=/Game/maerial/m_road_brick_Inst2.m_road_brick_Inst2;
-RecentlyPlaced=/Game/maerial/m_road_brick_Inst1.m_road_brick_Inst1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Quarry_Outcrop_ufnqafgfa/S_Quarry_Outcrop_ufnqafgfa_lod3_Var1.S_Quarry_Outcrop_ufnqafgfa_lod3_Var1;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Marble_Polished.M_Rock_Marble_Polished;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Basalt.M_Rock_Basalt;
 
 [MessageLog]
 LastLogListing=EditorErrors
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ancient
-MRUItem1=/Game/maerial/m_wall_brick
-MRUItem2=/Game/maerial/m_wall_brick_Inst
-MRUItem3=/Game/demo
-MRUItem4=/Game/maerial/MI_Limestone_ue2pfetc_2K
-MRUItem5=/Game/maerial/m_road_brick1
-MRUItem6=/Game/maerial/m_road_brick_Inst3
-MRUItem7=/Game/maerial/m_road_brick_Inst2
-MRUItem8=/Game/maerial/m_paint
-MRUItem9=/Game/maerial/m_paint1
-MRUItem10=/Game/maerial/m_road_brick_Inst1
-MRUItem11=/Game/maerial/m_road_rock1_Inst
-MRUItem12=/Game/maerial/m_road_rock1
-MRUItem13=/Game/maerial/m_road_rock
-MRUItem14=/Game/maerial/m_road_brick_Inst
-MRUItem15=/Game/maerial/m_road_brick
-MRUItem16=/Game/maerial/m_rooftop2
-MRUItem17=/Game/maerial/m_wall_paint
-MRUItem18=/Game/maerial/m_rooftop1
-MRUItem19=/Game/modi/FbxScene_house_1
+MRUItem1=/Game/demo
+MRUItem2=/Game/maerial/window_paper
+MRUItem3=/Game/maerial/m_wall_brick_Inst
+MRUItem4=/Game/maerial/m_wall_brick
+MRUItem5=/Game/maerial/MI_Limestone_ue2pfetc_2K
+MRUItem6=/Game/maerial/m_road_brick1
+MRUItem7=/Game/maerial/m_road_brick_Inst3
+MRUItem8=/Game/maerial/m_road_brick_Inst2
+MRUItem9=/Game/maerial/m_paint
+MRUItem10=/Game/maerial/m_paint1
+MRUItem11=/Game/maerial/m_road_brick_Inst1
+MRUItem12=/Game/maerial/m_road_rock1_Inst
+MRUItem13=/Game/maerial/m_road_rock1
+MRUItem14=/Game/maerial/m_road_rock
+MRUItem15=/Game/maerial/m_road_brick_Inst
+MRUItem16=/Game/maerial/m_road_brick
+MRUItem17=/Game/maerial/m_rooftop2
+MRUItem18=/Game/maerial/m_wall_paint
+MRUItem19=/Game/maerial/m_rooftop1
 
 [AssetEditorToolkitTabLocation]
 /Game/VRSpectator/VRSpectator.VRSpectator=1
@@ -675,6 +685,8 @@ MRUItem19=/Game/modi/FbxScene_house_1
 /Game/maerial/m_road_rock1.m_road_rock1=1
 /Game/maerial/m_paint1.m_paint1=1
 /Game/maerial/MI_Limestone_ue2pfetc_2K.MI_Limestone_ue2pfetc_2K=1
+/Game/maerial/m_wall_brick_Inst.m_wall_brick_Inst=1
+/Game/maerial/window_paper.window_paper=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -933,7 +945,7 @@ bDeleteExistingMorphTargetCurves=False
 [RootWindow]
 ScreenPosition=X=640.000 Y=160.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
