--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -414,6 +414,10 @@ TakeRecorderSource="\"Object\" "
 MovieSceneAnimationTrackRecorderEditorSettings="\"Object\" "
 MovieSceneTrackRecorderSettings="\"Object\" "
 TakeRecorderWorldSourceSettings="\"Object\" "
+MaterialEditorInstanceConstant="\"Object\" "
+MaterialInstanceConstant="\"Object\" "
+MaterialInstance="\"Object\" "
+MaterialInterface="\"Object\" "
 
 [DetailCategories]
 LightmassImportanceVolume.TransformCommon=True
@@ -1586,7 +1590,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.722077429
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/modi/cyberdistrict
+ContentBrowserTab1.SelectedPaths=/Game/modi/cyberdistrict/1/materials
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -1644,26 +1648,26 @@ RecentlyPlaced=/Game/maerial/MI_Limestone_ue2pfetc_2K.MI_Limestone_ue2pfetc_2K;
 LastLogListing=AssetCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/modi/cyberdistrict/2/Materials/KB3D_CBD_BDArcadeA
-MRUItem1=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_u
-MRUItem2=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acpd_a
-MRUItem3=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgAbandonedBuilding_A
-MRUItem4=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_buildingd
-MRUItem5=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_buildingc
-MRUItem6=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_buildingb
-MRUItem7=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_buildinga
-MRUItem8=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_billboardd
-MRUItem9=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_billboardc
-MRUItem10=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_billboardb
-MRUItem11=/Game/modi/cyberdistrict/1/materials/kb3d_cbp_atlasdgbannera
-MRUItem12=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_billboarda
-MRUItem13=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_antennae
-MRUItem14=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_antennad
-MRUItem15=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_antennac
-MRUItem16=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_antennab
-MRUItem17=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_antennaa
-MRUItem18=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_acunitb
-MRUItem19=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_acunita
+MRUItem0=/Game/modi/cyberdistrict/1/materials/kb3d_cbp_steelgrid
+MRUItem1=/Game/modi/cyberdistrict/1/materials/kb3d_cbp_concretetiles
+MRUItem2=/Game/modi/cyberdistrict/2/Materials/KB3D_CBD_BDArcadeA
+MRUItem3=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_u
+MRUItem4=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acpd_a
+MRUItem5=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgAbandonedBuilding_A
+MRUItem6=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_buildingd
+MRUItem7=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_buildingc
+MRUItem8=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_buildingb
+MRUItem9=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_buildinga
+MRUItem10=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_billboardd
+MRUItem11=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_billboardc
+MRUItem12=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_billboardb
+MRUItem13=/Game/modi/cyberdistrict/1/materials/kb3d_cbp_atlasdgbannera
+MRUItem14=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_billboarda
+MRUItem15=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_antennae
+MRUItem16=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_antennad
+MRUItem17=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_antennac
+MRUItem18=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_antennab
+MRUItem19=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_i_antennaa
 
 [AssetEditorToolkitTabLocation]
 /Game/VRSpectator/VRSpectator.VRSpectator=1
