--- a/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -108,29 +108,85 @@ LastLevel=/Game/VRTemplate/Maps/VRTemplateMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_acpd_a_acunite.KB3D_CBP_ACPD_A_ACunitE
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_therogue_a.KB3D_CBP_TheRogue_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acpd_a.KB3D_CBP_ACPD_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_a.KB3D_CBP_ACunit_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_b.KB3D_CBP_ACunit_B
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_c.KB3D_CBP_ACunit_C
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_d.KB3D_CBP_ACunit_D
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_e.KB3D_CBP_ACunit_E
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_f.KB3D_CBP_ACunit_F
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_g.KB3D_CBP_ACunit_G
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_h.KB3D_CBP_ACunit_H
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_i.KB3D_CBP_ACunit_I
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_j.KB3D_CBP_ACunit_J
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_k.KB3D_CBP_ACunit_K
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_l.KB3D_CBP_ACunit_L
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_m.KB3D_CBP_ACunit_M
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_n.KB3D_CBP_ACunit_N
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_o.KB3D_CBP_ACunit_O
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_p.KB3D_CBP_ACunit_P
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_q.KB3D_CBP_ACunit_Q
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_r.KB3D_CBP_ACunit_R
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_s.KB3D_CBP_ACunit_S
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_t.KB3D_CBP_ACunit_T
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_u.KB3D_CBP_ACunit_U
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_v.KB3D_CBP_ACunit_V
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_w.KB3D_CBP_ACunit_W
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_corporate_a.KB3D_CBP_Corporate_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_cryptosafe_a.KB3D_CBP_CryptoSafe_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_cryptosafe_b.KB3D_CBP_CryptoSafe_B
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_cyberbunny_a.KB3D_CBP_CyberBunny_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_drone_a.KB3D_CBP_Drone_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_ethereal_a.KB3D_CBP_Ethereal_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_fudcup_a.KB3D_CBP_FudCup_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_hypergear_a.KB3D_CBP_Hypergear_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_hypergear_b.KB3D_CBP_Hypergear_B
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_g.KB3D_CBP_Residential_G
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_parallax_a.KB3D_CBP_Parallax_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_pcrepair_a.KB3D_CBP_PcRepair_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_a.KB3D_CBP_Residential_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_b.KB3D_CBP_Residential_B
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_c.KB3D_CBP_Residential_C
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_d.KB3D_CBP_Residential_D
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_e.KB3D_CBP_Residential_E
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_f.KB3D_CBP_Residential_F
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_h.KB3D_CBP_Residential_H
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_i.KB3D_CBP_Residential_I
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_j.KB3D_CBP_Residential_J
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_k.KB3D_CBP_Residential_K
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_l.KB3D_CBP_Residential_L
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_roofstructure_a.KB3D_CBP_RoofStructure_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_roofstructure_b.KB3D_CBP_RoofStructure_B
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_roofstructure_c.KB3D_CBP_RoofStructure_C
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_stairs_a.KB3D_CBP_Stairs_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_tattooshop_a.KB3D_CBP_TattooShop_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_terraluma_a.KB3D_CBP_Terraluma_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_transcendence_a.KB3D_CBP_Transcendence_A
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_watertank_f.KB3D_CBP_WaterTank_F
+OpenAssetsAtExit=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_xmedia_a.KB3D_CBP_Xmedia_A
 
 [ContentBrowserRecent]
-MRUItem0=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_acpd_a_acunite
-MRUItem1=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_acpd_a_acunitd
-MRUItem2=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_acpd_a_acunitc
-MRUItem3=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_corporate_a_acunita
-MRUItem4=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_corporate_a
-MRUItem5=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_acpd_a_acunitb
-MRUItem6=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_acpd_a_acunita
-MRUItem7=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_transcendence_a
-MRUItem8=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_terraluma_a
-MRUItem9=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_tattooshop_a
-MRUItem10=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_stairs_a
-MRUItem11=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_roofstructure_c
-MRUItem12=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_roofstructure_b
-MRUItem13=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_roofstructure_a
-MRUItem14=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_l
-MRUItem15=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_j
-MRUItem16=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_h
-MRUItem17=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_g
-MRUItem18=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_f
-MRUItem19=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_e
+MRUItem0=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_xmedia_a
+MRUItem1=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_watertank_f
+MRUItem2=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_transcendence_a
+MRUItem3=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_terraluma_a
+MRUItem4=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_tattooshop_a
+MRUItem5=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_stairs_a
+MRUItem6=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_roofstructure_c
+MRUItem7=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_roofstructure_b
+MRUItem8=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_roofstructure_a
+MRUItem9=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_l
+MRUItem10=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_k
+MRUItem11=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_j
+MRUItem12=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_i
+MRUItem13=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_h
+MRUItem14=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_f
+MRUItem15=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_e
+MRUItem16=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_d
+MRUItem17=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_c
+MRUItem18=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_b
+MRUItem19=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_a
 
 [DetailCategories]
 KB3D_CBP_FudCup_A_C.Tick=True
@@ -445,6 +501,306 @@ StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.RayTracing=True
 StaticMesh.Navigation=True
+KB3D_CBP_TheRogue_A_C.Tick=True
+KB3D_CBP_TheRogue_A_C.Replication=True
+KB3D_CBP_TheRogue_A_C.Rendering=True
+KB3D_CBP_TheRogue_A_C.Collision=True
+KB3D_CBP_TheRogue_A_C.Actor=True
+KB3D_CBP_TheRogue_A_C.Input=True
+KB3D_CBP_TheRogue_A_C.HLOD=True
+KB3D_CBP_TheRogue_A_C.Physics=True
+KB3D_CBP_TheRogue_A_C.WorldPartition=True
+KB3D_CBP_TheRogue_A_C.Events=True
+KB3D_CBP_ACPD_A_C.Tick=True
+KB3D_CBP_ACPD_A_C.Replication=True
+KB3D_CBP_ACPD_A_C.Rendering=True
+KB3D_CBP_ACPD_A_C.Collision=True
+KB3D_CBP_ACPD_A_C.Actor=True
+KB3D_CBP_ACPD_A_C.Input=True
+KB3D_CBP_ACPD_A_C.HLOD=True
+KB3D_CBP_ACPD_A_C.Physics=True
+KB3D_CBP_ACPD_A_C.WorldPartition=True
+KB3D_CBP_ACPD_A_C.Events=True
+KB3D_CBP_ACunit_A_C.Tick=True
+KB3D_CBP_ACunit_A_C.Replication=True
+KB3D_CBP_ACunit_A_C.Rendering=True
+KB3D_CBP_ACunit_A_C.Collision=True
+KB3D_CBP_ACunit_A_C.Actor=True
+KB3D_CBP_ACunit_A_C.Input=True
+KB3D_CBP_ACunit_A_C.HLOD=True
+KB3D_CBP_ACunit_A_C.Physics=True
+KB3D_CBP_ACunit_A_C.WorldPartition=True
+KB3D_CBP_ACunit_A_C.Events=True
+KB3D_CBP_ACunit_B_C.Tick=True
+KB3D_CBP_ACunit_B_C.Replication=True
+KB3D_CBP_ACunit_B_C.Rendering=True
+KB3D_CBP_ACunit_B_C.Collision=True
+KB3D_CBP_ACunit_B_C.Actor=True
+KB3D_CBP_ACunit_B_C.Input=True
+KB3D_CBP_ACunit_B_C.HLOD=True
+KB3D_CBP_ACunit_B_C.Physics=True
+KB3D_CBP_ACunit_B_C.WorldPartition=True
+KB3D_CBP_ACunit_B_C.Events=True
+KB3D_CBP_ACunit_C_C.Tick=True
+KB3D_CBP_ACunit_C_C.Replication=True
+KB3D_CBP_ACunit_C_C.Rendering=True
+KB3D_CBP_ACunit_C_C.Collision=True
+KB3D_CBP_ACunit_C_C.Actor=True
+KB3D_CBP_ACunit_C_C.Input=True
+KB3D_CBP_ACunit_C_C.HLOD=True
+KB3D_CBP_ACunit_C_C.Physics=True
+KB3D_CBP_ACunit_C_C.WorldPartition=True
+KB3D_CBP_ACunit_C_C.Events=True
+KB3D_CBP_ACunit_D_C.Tick=True
+KB3D_CBP_ACunit_D_C.Replication=True
+KB3D_CBP_ACunit_D_C.Rendering=True
+KB3D_CBP_ACunit_D_C.Collision=True
+KB3D_CBP_ACunit_D_C.Actor=True
+KB3D_CBP_ACunit_D_C.Input=True
+KB3D_CBP_ACunit_D_C.HLOD=True
+KB3D_CBP_ACunit_D_C.Physics=True
+KB3D_CBP_ACunit_D_C.WorldPartition=True
+KB3D_CBP_ACunit_D_C.Events=True
+KB3D_CBP_ACunit_E_C.Tick=True
+KB3D_CBP_ACunit_E_C.Replication=True
+KB3D_CBP_ACunit_E_C.Rendering=True
+KB3D_CBP_ACunit_E_C.Collision=True
+KB3D_CBP_ACunit_E_C.Actor=True
+KB3D_CBP_ACunit_E_C.Input=True
+KB3D_CBP_ACunit_E_C.HLOD=True
+KB3D_CBP_ACunit_E_C.Physics=True
+KB3D_CBP_ACunit_E_C.WorldPartition=True
+KB3D_CBP_ACunit_E_C.Events=True
+KB3D_CBP_ACunit_F_C.Tick=True
+KB3D_CBP_ACunit_F_C.Replication=True
+KB3D_CBP_ACunit_F_C.Rendering=True
+KB3D_CBP_ACunit_F_C.Collision=True
+KB3D_CBP_ACunit_F_C.Actor=True
+KB3D_CBP_ACunit_F_C.Input=True
+KB3D_CBP_ACunit_F_C.HLOD=True
+KB3D_CBP_ACunit_F_C.Physics=True
+KB3D_CBP_ACunit_F_C.WorldPartition=True
+KB3D_CBP_ACunit_F_C.Events=True
+KB3D_CBP_ACunit_G_C.Tick=True
+KB3D_CBP_ACunit_G_C.Replication=True
+KB3D_CBP_ACunit_G_C.Rendering=True
+KB3D_CBP_ACunit_G_C.Collision=True
+KB3D_CBP_ACunit_G_C.Actor=True
+KB3D_CBP_ACunit_G_C.Input=True
+KB3D_CBP_ACunit_G_C.HLOD=True
+KB3D_CBP_ACunit_G_C.Physics=True
+KB3D_CBP_ACunit_G_C.WorldPartition=True
+KB3D_CBP_ACunit_G_C.Events=True
+KB3D_CBP_ACunit_H_C.Tick=True
+KB3D_CBP_ACunit_H_C.Replication=True
+KB3D_CBP_ACunit_H_C.Rendering=True
+KB3D_CBP_ACunit_H_C.Collision=True
+KB3D_CBP_ACunit_H_C.Actor=True
+KB3D_CBP_ACunit_H_C.Input=True
+KB3D_CBP_ACunit_H_C.HLOD=True
+KB3D_CBP_ACunit_H_C.Physics=True
+KB3D_CBP_ACunit_H_C.WorldPartition=True
+KB3D_CBP_ACunit_H_C.Events=True
+KB3D_CBP_ACunit_I_C.Tick=True
+KB3D_CBP_ACunit_I_C.Replication=True
+KB3D_CBP_ACunit_I_C.Rendering=True
+KB3D_CBP_ACunit_I_C.Collision=True
+KB3D_CBP_ACunit_I_C.Actor=True
+KB3D_CBP_ACunit_I_C.Input=True
+KB3D_CBP_ACunit_I_C.HLOD=True
+KB3D_CBP_ACunit_I_C.Physics=True
+KB3D_CBP_ACunit_I_C.WorldPartition=True
+KB3D_CBP_ACunit_I_C.Events=True
+KB3D_CBP_ACunit_J_C.Tick=True
+KB3D_CBP_ACunit_J_C.Replication=True
+KB3D_CBP_ACunit_J_C.Rendering=True
+KB3D_CBP_ACunit_J_C.Collision=True
+KB3D_CBP_ACunit_J_C.Actor=True
+KB3D_CBP_ACunit_J_C.Input=True
+KB3D_CBP_ACunit_J_C.HLOD=True
+KB3D_CBP_ACunit_J_C.Physics=True
+KB3D_CBP_ACunit_J_C.WorldPartition=True
+KB3D_CBP_ACunit_J_C.Events=True
+KB3D_CBP_ACunit_K_C.Tick=True
+KB3D_CBP_ACunit_K_C.Replication=True
+KB3D_CBP_ACunit_K_C.Rendering=True
+KB3D_CBP_ACunit_K_C.Collision=True
+KB3D_CBP_ACunit_K_C.Actor=True
+KB3D_CBP_ACunit_K_C.Input=True
+KB3D_CBP_ACunit_K_C.HLOD=True
+KB3D_CBP_ACunit_K_C.Physics=True
+KB3D_CBP_ACunit_K_C.WorldPartition=True
+KB3D_CBP_ACunit_K_C.Events=True
+KB3D_CBP_ACunit_L_C.Tick=True
+KB3D_CBP_ACunit_L_C.Replication=True
+KB3D_CBP_ACunit_L_C.Rendering=True
+KB3D_CBP_ACunit_L_C.Collision=True
+KB3D_CBP_ACunit_L_C.Actor=True
+KB3D_CBP_ACunit_L_C.Input=True
+KB3D_CBP_ACunit_L_C.HLOD=True
+KB3D_CBP_ACunit_L_C.Physics=True
+KB3D_CBP_ACunit_L_C.WorldPartition=True
+KB3D_CBP_ACunit_L_C.Events=True
+KB3D_CBP_ACunit_M_C.Tick=True
+KB3D_CBP_ACunit_M_C.Replication=True
+KB3D_CBP_ACunit_M_C.Rendering=True
+KB3D_CBP_ACunit_M_C.Collision=True
+KB3D_CBP_ACunit_M_C.Actor=True
+KB3D_CBP_ACunit_M_C.Input=True
+KB3D_CBP_ACunit_M_C.HLOD=True
+KB3D_CBP_ACunit_M_C.Physics=True
+KB3D_CBP_ACunit_M_C.WorldPartition=True
+KB3D_CBP_ACunit_M_C.Events=True
+KB3D_CBP_ACunit_N_C.Tick=True
+KB3D_CBP_ACunit_N_C.Replication=True
+KB3D_CBP_ACunit_N_C.Rendering=True
+KB3D_CBP_ACunit_N_C.Collision=True
+KB3D_CBP_ACunit_N_C.Actor=True
+KB3D_CBP_ACunit_N_C.Input=True
+KB3D_CBP_ACunit_N_C.HLOD=True
+KB3D_CBP_ACunit_N_C.Physics=True
+KB3D_CBP_ACunit_N_C.WorldPartition=True
+KB3D_CBP_ACunit_N_C.Events=True
+KB3D_CBP_ACunit_O_C.Tick=True
+KB3D_CBP_ACunit_O_C.Replication=True
+KB3D_CBP_ACunit_O_C.Rendering=True
+KB3D_CBP_ACunit_O_C.Collision=True
+KB3D_CBP_ACunit_O_C.Actor=True
+KB3D_CBP_ACunit_O_C.Input=True
+KB3D_CBP_ACunit_O_C.HLOD=True
+KB3D_CBP_ACunit_O_C.Physics=True
+KB3D_CBP_ACunit_O_C.WorldPartition=True
+KB3D_CBP_ACunit_O_C.Events=True
+KB3D_CBP_ACunit_P_C.Tick=True
+KB3D_CBP_ACunit_P_C.Replication=True
+KB3D_CBP_ACunit_P_C.Rendering=True
+KB3D_CBP_ACunit_P_C.Collision=True
+KB3D_CBP_ACunit_P_C.Actor=True
+KB3D_CBP_ACunit_P_C.Input=True
+KB3D_CBP_ACunit_P_C.HLOD=True
+KB3D_CBP_ACunit_P_C.Physics=True
+KB3D_CBP_ACunit_P_C.WorldPartition=True
+KB3D_CBP_ACunit_P_C.Events=True
+KB3D_CBP_ACunit_Q_C.Tick=True
+KB3D_CBP_ACunit_Q_C.Replication=True
+KB3D_CBP_ACunit_Q_C.Rendering=True
+KB3D_CBP_ACunit_Q_C.Collision=True
+KB3D_CBP_ACunit_Q_C.Actor=True
+KB3D_CBP_ACunit_Q_C.Input=True
+KB3D_CBP_ACunit_Q_C.HLOD=True
+KB3D_CBP_ACunit_Q_C.Physics=True
+KB3D_CBP_ACunit_Q_C.WorldPartition=True
+KB3D_CBP_ACunit_Q_C.Events=True
+KB3D_CBP_ACunit_R_C.Tick=True
+KB3D_CBP_ACunit_R_C.Replication=True
+KB3D_CBP_ACunit_R_C.Rendering=True
+KB3D_CBP_ACunit_R_C.Collision=True
+KB3D_CBP_ACunit_R_C.Actor=True
+KB3D_CBP_ACunit_R_C.Input=True
+KB3D_CBP_ACunit_R_C.HLOD=True
+KB3D_CBP_ACunit_R_C.Physics=True
+KB3D_CBP_ACunit_R_C.WorldPartition=True
+KB3D_CBP_ACunit_R_C.Events=True
+KB3D_CBP_ACunit_S_C.Tick=True
+KB3D_CBP_ACunit_S_C.Replication=True
+KB3D_CBP_ACunit_S_C.Rendering=True
+KB3D_CBP_ACunit_S_C.Collision=True
+KB3D_CBP_ACunit_S_C.Actor=True
+KB3D_CBP_ACunit_S_C.Input=True
+KB3D_CBP_ACunit_S_C.HLOD=True
+KB3D_CBP_ACunit_S_C.Physics=True
+KB3D_CBP_ACunit_S_C.WorldPartition=True
+KB3D_CBP_ACunit_S_C.Events=True
+KB3D_CBP_ACunit_T_C.Tick=True
+KB3D_CBP_ACunit_T_C.Replication=True
+KB3D_CBP_ACunit_T_C.Rendering=True
+KB3D_CBP_ACunit_T_C.Collision=True
+KB3D_CBP_ACunit_T_C.Actor=True
+KB3D_CBP_ACunit_T_C.Input=True
+KB3D_CBP_ACunit_T_C.HLOD=True
+KB3D_CBP_ACunit_T_C.Physics=True
+KB3D_CBP_ACunit_T_C.WorldPartition=True
+KB3D_CBP_ACunit_T_C.Events=True
+KB3D_CBP_ACunit_U_C.Tick=True
+KB3D_CBP_ACunit_U_C.Replication=True
+KB3D_CBP_ACunit_U_C.Rendering=True
+KB3D_CBP_ACunit_U_C.Collision=True
+KB3D_CBP_ACunit_U_C.Actor=True
+KB3D_CBP_ACunit_U_C.Input=True
+KB3D_CBP_ACunit_U_C.HLOD=True
+KB3D_CBP_ACunit_U_C.Physics=True
+KB3D_CBP_ACunit_U_C.WorldPartition=True
+KB3D_CBP_ACunit_U_C.Events=True
+KB3D_CBP_ACunit_V_C.Tick=True
+KB3D_CBP_ACunit_V_C.Replication=True
+KB3D_CBP_ACunit_V_C.Rendering=True
+KB3D_CBP_ACunit_V_C.Collision=True
+KB3D_CBP_ACunit_V_C.Actor=True
+KB3D_CBP_ACunit_V_C.Input=True
+KB3D_CBP_ACunit_V_C.HLOD=True
+KB3D_CBP_ACunit_V_C.Physics=True
+KB3D_CBP_ACunit_V_C.WorldPartition=True
+KB3D_CBP_ACunit_V_C.Events=True
+KB3D_CBP_ACunit_W_C.Tick=True
+KB3D_CBP_ACunit_W_C.Replication=True
+KB3D_CBP_ACunit_W_C.Rendering=True
+KB3D_CBP_ACunit_W_C.Collision=True
+KB3D_CBP_ACunit_W_C.Actor=True
+KB3D_CBP_ACunit_W_C.Input=True
+KB3D_CBP_ACunit_W_C.HLOD=True
+KB3D_CBP_ACunit_W_C.Physics=True
+KB3D_CBP_ACunit_W_C.WorldPartition=True
+KB3D_CBP_ACunit_W_C.Events=True
+KB3D_CBP_Parallax_A_C.Tick=True
+KB3D_CBP_Parallax_A_C.Replication=True
+KB3D_CBP_Parallax_A_C.Rendering=True
+KB3D_CBP_Parallax_A_C.Collision=True
+KB3D_CBP_Parallax_A_C.Actor=True
+KB3D_CBP_Parallax_A_C.Input=True
+KB3D_CBP_Parallax_A_C.HLOD=True
+KB3D_CBP_Parallax_A_C.Physics=True
+KB3D_CBP_Parallax_A_C.WorldPartition=True
+KB3D_CBP_Parallax_A_C.Events=True
+KB3D_CBP_Residential_D_C.Tick=True
+KB3D_CBP_Residential_D_C.Replication=True
+KB3D_CBP_Residential_D_C.Rendering=True
+KB3D_CBP_Residential_D_C.Collision=True
+KB3D_CBP_Residential_D_C.Actor=True
+KB3D_CBP_Residential_D_C.Input=True
+KB3D_CBP_Residential_D_C.HLOD=True
+KB3D_CBP_Residential_D_C.Physics=True
+KB3D_CBP_Residential_D_C.WorldPartition=True
+KB3D_CBP_Residential_D_C.Events=True
+KB3D_CBP_Residential_I_C.Tick=True
+KB3D_CBP_Residential_I_C.Replication=True
+KB3D_CBP_Residential_I_C.Rendering=True
+KB3D_CBP_Residential_I_C.Collision=True
+KB3D_CBP_Residential_I_C.Actor=True
+KB3D_CBP_Residential_I_C.Input=True
+KB3D_CBP_Residential_I_C.HLOD=True
+KB3D_CBP_Residential_I_C.Physics=True
+KB3D_CBP_Residential_I_C.WorldPartition=True
+KB3D_CBP_Residential_I_C.Events=True
+KB3D_CBP_Residential_K_C.Tick=True
+KB3D_CBP_Residential_K_C.Replication=True
+KB3D_CBP_Residential_K_C.Rendering=True
+KB3D_CBP_Residential_K_C.Collision=True
+KB3D_CBP_Residential_K_C.Actor=True
+KB3D_CBP_Residential_K_C.Input=True
+KB3D_CBP_Residential_K_C.HLOD=True
+KB3D_CBP_Residential_K_C.Physics=True
+KB3D_CBP_Residential_K_C.WorldPartition=True
+KB3D_CBP_Residential_K_C.Events=True
+KB3D_CBP_WaterTank_F_C.Tick=True
+KB3D_CBP_WaterTank_F_C.Replication=True
+KB3D_CBP_WaterTank_F_C.Rendering=True
+KB3D_CBP_WaterTank_F_C.Collision=True
+KB3D_CBP_WaterTank_F_C.Actor=True
+KB3D_CBP_WaterTank_F_C.Input=True
+KB3D_CBP_WaterTank_F_C.HLOD=True
+KB3D_CBP_WaterTank_F_C.Physics=True
+KB3D_CBP_WaterTank_F_C.WorldPartition=True
+KB3D_CBP_WaterTank_F_C.Events=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -459,7 +815,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/modi/cyberdistrict/1/geometries
+ContentBrowserDrawer.SelectedPaths=/Game/modi/cyberdistrict/1/actors
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
