--- a/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -109,29 +109,29 @@ MeshNaniteSettings=
 LastLevel=/Game/VRTemplate/Maps/VRTemplateMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_a
-MRUItem1=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_powerexhaust
-MRUItem2=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_pipesc
-MRUItem3=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_pipesb
-MRUItem4=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_pipesa
-MRUItem5=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_neonsign
-MRUItem6=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_mphb
-MRUItem7=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_mpha
-MRUItem8=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_ladder
-MRUItem9=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_hvacb
-MRUItem10=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_hvaca
-MRUItem11=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_cables
-MRUItem12=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_buildingb
-MRUItem13=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_buildinga
-MRUItem14=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_billboardb
-MRUItem15=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_billboarda
-MRUItem16=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_base
-MRUItem17=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_antennab
-MRUItem18=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_antennaa
-MRUItem19=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_acunitf
+MRUItem0=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropMattress_A
+MRUItem1=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgSmBusStop_A
+MRUItem2=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgStreetApartment_A
+MRUItem3=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgSaltySquid_A
+MRUItem4=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgPCRepair_A
+MRUItem5=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgLibrary_A
+MRUItem6=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgGameStore_A
+MRUItem7=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgConvenienceStore_A
+MRUItem8=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgBikeStop_A
+MRUItem9=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgAlley_A
+MRUItem10=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgAbandonedRestaurant_A
+MRUItem11=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgAbandonedBuilding_A
+MRUItem12=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_VehicleDjVan_A
+MRUItem13=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_therogue_a
+MRUItem14=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_transcendence_a
+MRUItem15=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_roofstructure_c
+MRUItem16=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_roofstructure_b
+MRUItem17=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_cryptosafe_b
+MRUItem18=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_parallax_a
+MRUItem19=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_pcrepair_a
 
 [DetailCategories]
 KB3D_CBP_FudCup_A_C.Tick=True
@@ -766,6 +766,126 @@ KB3D_CBP_Xmedia_A_C.HLOD=True
 KB3D_CBP_Xmedia_A_C.Physics=True
 KB3D_CBP_Xmedia_A_C.WorldPartition=True
 KB3D_CBP_Xmedia_A_C.Events=True
+KB3D_CBD_VehicleDjVan_A_C.Tick=True
+KB3D_CBD_VehicleDjVan_A_C.Replication=True
+KB3D_CBD_VehicleDjVan_A_C.Rendering=True
+KB3D_CBD_VehicleDjVan_A_C.Collision=True
+KB3D_CBD_VehicleDjVan_A_C.Actor=True
+KB3D_CBD_VehicleDjVan_A_C.Input=True
+KB3D_CBD_VehicleDjVan_A_C.HLOD=True
+KB3D_CBD_VehicleDjVan_A_C.Physics=True
+KB3D_CBD_VehicleDjVan_A_C.WorldPartition=True
+KB3D_CBD_VehicleDjVan_A_C.Events=True
+KB3D_CBD_BldgLgAbandonedRestaurant_A_C.Tick=True
+KB3D_CBD_BldgLgAbandonedRestaurant_A_C.Replication=True
+KB3D_CBD_BldgLgAbandonedRestaurant_A_C.Rendering=True
+KB3D_CBD_BldgLgAbandonedRestaurant_A_C.Collision=True
+KB3D_CBD_BldgLgAbandonedRestaurant_A_C.Actor=True
+KB3D_CBD_BldgLgAbandonedRestaurant_A_C.Input=True
+KB3D_CBD_BldgLgAbandonedRestaurant_A_C.HLOD=True
+KB3D_CBD_BldgLgAbandonedRestaurant_A_C.Physics=True
+KB3D_CBD_BldgLgAbandonedRestaurant_A_C.WorldPartition=True
+KB3D_CBD_BldgLgAbandonedRestaurant_A_C.Events=True
+KB3D_CBD_BldgLgAlley_A_C.Tick=True
+KB3D_CBD_BldgLgAlley_A_C.Replication=True
+KB3D_CBD_BldgLgAlley_A_C.Rendering=True
+KB3D_CBD_BldgLgAlley_A_C.Collision=True
+KB3D_CBD_BldgLgAlley_A_C.Actor=True
+KB3D_CBD_BldgLgAlley_A_C.Input=True
+KB3D_CBD_BldgLgAlley_A_C.HLOD=True
+KB3D_CBD_BldgLgAlley_A_C.Physics=True
+KB3D_CBD_BldgLgAlley_A_C.WorldPartition=True
+KB3D_CBD_BldgLgAlley_A_C.Events=True
+KB3D_CBD_BldgLgBikeStop_A_C.Tick=True
+KB3D_CBD_BldgLgBikeStop_A_C.Replication=True
+KB3D_CBD_BldgLgBikeStop_A_C.Rendering=True
+KB3D_CBD_BldgLgBikeStop_A_C.Collision=True
+KB3D_CBD_BldgLgBikeStop_A_C.Actor=True
+KB3D_CBD_BldgLgBikeStop_A_C.Input=True
+KB3D_CBD_BldgLgBikeStop_A_C.HLOD=True
+KB3D_CBD_BldgLgBikeStop_A_C.Physics=True
+KB3D_CBD_BldgLgBikeStop_A_C.WorldPartition=True
+KB3D_CBD_BldgLgBikeStop_A_C.Events=True
+KB3D_CBD_BldgLgConvenienceStore_A_C.Tick=True
+KB3D_CBD_BldgLgConvenienceStore_A_C.Replication=True
+KB3D_CBD_BldgLgConvenienceStore_A_C.Rendering=True
+KB3D_CBD_BldgLgConvenienceStore_A_C.Collision=True
+KB3D_CBD_BldgLgConvenienceStore_A_C.Actor=True
+KB3D_CBD_BldgLgConvenienceStore_A_C.Input=True
+KB3D_CBD_BldgLgConvenienceStore_A_C.HLOD=True
+KB3D_CBD_BldgLgConvenienceStore_A_C.Physics=True
+KB3D_CBD_BldgLgConvenienceStore_A_C.WorldPartition=True
+KB3D_CBD_BldgLgConvenienceStore_A_C.Events=True
+KB3D_CBD_BldgLgGameStore_A_C.Tick=True
+KB3D_CBD_BldgLgGameStore_A_C.Replication=True
+KB3D_CBD_BldgLgGameStore_A_C.Rendering=True
+KB3D_CBD_BldgLgGameStore_A_C.Collision=True
+KB3D_CBD_BldgLgGameStore_A_C.Actor=True
+KB3D_CBD_BldgLgGameStore_A_C.Input=True
+KB3D_CBD_BldgLgGameStore_A_C.HLOD=True
+KB3D_CBD_BldgLgGameStore_A_C.Physics=True
+KB3D_CBD_BldgLgGameStore_A_C.WorldPartition=True
+KB3D_CBD_BldgLgGameStore_A_C.Events=True
+KB3D_CBD_BldgLgLibrary_A_C.Tick=True
+KB3D_CBD_BldgLgLibrary_A_C.Replication=True
+KB3D_CBD_BldgLgLibrary_A_C.Rendering=True
+KB3D_CBD_BldgLgLibrary_A_C.Collision=True
+KB3D_CBD_BldgLgLibrary_A_C.Actor=True
+KB3D_CBD_BldgLgLibrary_A_C.Input=True
+KB3D_CBD_BldgLgLibrary_A_C.HLOD=True
+KB3D_CBD_BldgLgLibrary_A_C.Physics=True
+KB3D_CBD_BldgLgLibrary_A_C.WorldPartition=True
+KB3D_CBD_BldgLgLibrary_A_C.Events=True
+KB3D_CBD_BldgLgPCRepair_A_C.Tick=True
+KB3D_CBD_BldgLgPCRepair_A_C.Replication=True
+KB3D_CBD_BldgLgPCRepair_A_C.Rendering=True
+KB3D_CBD_BldgLgPCRepair_A_C.Collision=True
+KB3D_CBD_BldgLgPCRepair_A_C.Actor=True
+KB3D_CBD_BldgLgPCRepair_A_C.Input=True
+KB3D_CBD_BldgLgPCRepair_A_C.HLOD=True
+KB3D_CBD_BldgLgPCRepair_A_C.Physics=True
+KB3D_CBD_BldgLgPCRepair_A_C.WorldPartition=True
+KB3D_CBD_BldgLgPCRepair_A_C.Events=True
+KB3D_CBD_BldgLgSaltySquid_A_C.Tick=True
+KB3D_CBD_BldgLgSaltySquid_A_C.Replication=True
+KB3D_CBD_BldgLgSaltySquid_A_C.Rendering=True
+KB3D_CBD_BldgLgSaltySquid_A_C.Collision=True
+KB3D_CBD_BldgLgSaltySquid_A_C.Actor=True
+KB3D_CBD_BldgLgSaltySquid_A_C.Input=True
+KB3D_CBD_BldgLgSaltySquid_A_C.HLOD=True
+KB3D_CBD_BldgLgSaltySquid_A_C.Physics=True
+KB3D_CBD_BldgLgSaltySquid_A_C.WorldPartition=True
+KB3D_CBD_BldgLgSaltySquid_A_C.Events=True
+KB3D_CBD_BldgLgStreetApartment_A_C.Tick=True
+KB3D_CBD_BldgLgStreetApartment_A_C.Replication=True
+KB3D_CBD_BldgLgStreetApartment_A_C.Rendering=True
+KB3D_CBD_BldgLgStreetApartment_A_C.Collision=True
+KB3D_CBD_BldgLgStreetApartment_A_C.Actor=True
+KB3D_CBD_BldgLgStreetApartment_A_C.Input=True
+KB3D_CBD_BldgLgStreetApartment_A_C.HLOD=True
+KB3D_CBD_BldgLgStreetApartment_A_C.Physics=True
+KB3D_CBD_BldgLgStreetApartment_A_C.WorldPartition=True
+KB3D_CBD_BldgLgStreetApartment_A_C.Events=True
+KB3D_CBD_BldgSmBusStop_A_C.Tick=True
+KB3D_CBD_BldgSmBusStop_A_C.Replication=True
+KB3D_CBD_BldgSmBusStop_A_C.Rendering=True
+KB3D_CBD_BldgSmBusStop_A_C.Collision=True
+KB3D_CBD_BldgSmBusStop_A_C.Actor=True
+KB3D_CBD_BldgSmBusStop_A_C.Input=True
+KB3D_CBD_BldgSmBusStop_A_C.HLOD=True
+KB3D_CBD_BldgSmBusStop_A_C.Physics=True
+KB3D_CBD_BldgSmBusStop_A_C.WorldPartition=True
+KB3D_CBD_BldgSmBusStop_A_C.Events=True
+KB3D_CBD_PropMattress_A_C.Tick=True
+KB3D_CBD_PropMattress_A_C.Replication=True
+KB3D_CBD_PropMattress_A_C.Rendering=True
+KB3D_CBD_PropMattress_A_C.Collision=True
+KB3D_CBD_PropMattress_A_C.Actor=True
+KB3D_CBD_PropMattress_A_C.Input=True
+KB3D_CBD_PropMattress_A_C.HLOD=True
+KB3D_CBD_PropMattress_A_C.Physics=True
+KB3D_CBD_PropMattress_A_C.WorldPartition=True
+KB3D_CBD_PropMattress_A_C.Events=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1212,6 +1332,69 @@ ContentBrowserTab4.CurrentViewType=1
 /Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_pipesb.KB3D_CBP_Residential_A_PipesB=1
 /Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_pipesc.KB3D_CBP_Residential_A_PipesC=1
 /Game/modi/cyberdistrict/1/geometries/kb3d_cbp_residential_a_powerexhaust.KB3D_CBP_Residential_A_PowerExhaust=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_acunita.KB3D_CBP_PcRepair_A_ACunitA=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_acunitb.KB3D_CBP_PcRepair_A_ACunitB=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_acunitc.KB3D_CBP_PcRepair_A_ACunitC=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_acunitd.KB3D_CBP_PcRepair_A_ACunitD=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_acunite.KB3D_CBP_PcRepair_A_ACunitE=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_acunitf.KB3D_CBP_PcRepair_A_ACunitF=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_acunitg.KB3D_CBP_PcRepair_A_ACunitG=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_acunith.KB3D_CBP_PcRepair_A_ACunitH=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_billboarda.KB3D_CBP_PcRepair_A_BillboardA=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_billboardb.KB3D_CBP_PcRepair_A_BillboardB=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_billboardc.KB3D_CBP_PcRepair_A_BillboardC=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_buildinga.KB3D_CBP_PcRepair_A_BuildingA=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_buildingb.KB3D_CBP_PcRepair_A_BuildingB=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_cablesa.KB3D_CBP_PcRepair_A_CablesA=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_cablesb.KB3D_CBP_PcRepair_A_CablesB=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_entrancea.KB3D_CBP_PcRepair_A_EntranceA=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_entranceb.KB3D_CBP_PcRepair_A_EntranceB=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_facade.KB3D_CBP_PcRepair_A_Facade=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_facade001.KB3D_CBP_PcRepair_A_Facade001=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_hvaca.KB3D_CBP_PcRepair_A_HvacA=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_hvacb.KB3D_CBP_PcRepair_A_HvacB=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_hvacc.KB3D_CBP_PcRepair_A_HvacC=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_mph.KB3D_CBP_PcRepair_A_MPH=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_neonsign.KB3D_CBP_PcRepair_A_NeonSign=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_powerexhaust.KB3D_CBP_PcRepair_A_PowerExhaust=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_roofstructure.KB3D_CBP_PcRepair_A_RoofStructure=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_sidewalk.KB3D_CBP_PcRepair_A_Sidewalk=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_utilitydevice.KB3D_CBP_PcRepair_A_UtilityDevice=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_pcrepair_a_watertank.KB3D_CBP_PcRepair_A_WaterTank=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_acunita.KB3D_CBP_Parallax_A_ACunitA=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_acunitb.KB3D_CBP_Parallax_A_ACunitB=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_acunitc.KB3D_CBP_Parallax_A_ACunitC=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_acunitd.KB3D_CBP_Parallax_A_ACunitD=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_antennaa.KB3D_CBP_Parallax_A_AntennaA=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_antennab.KB3D_CBP_Parallax_A_AntennaB=1
+/Game/modi/cyberdistrict/1/actors/kb3d_cbp_parallax_a.KB3D_CBP_Parallax_A=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_antennac.KB3D_CBP_Parallax_A_AntennaC=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_antennad.KB3D_CBP_Parallax_A_AntennaD=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_billboarda.KB3D_CBP_Parallax_A_BillboardA=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_billboardb.KB3D_CBP_Parallax_A_BillboardB=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_billboardc.KB3D_CBP_Parallax_A_BillboardC=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_building.KB3D_CBP_Parallax_A_Building=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_holograma.KB3D_CBP_Parallax_A_HologramA=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_hologramb.KB3D_CBP_Parallax_A_HologramB=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_neonsign.KB3D_CBP_Parallax_A_NeonSign=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_sidewalk.KB3D_CBP_Parallax_A_Sidewalk=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_utilitydevicea.KB3D_CBP_Parallax_A_UtilityDeviceA=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_utilitydeviceb.KB3D_CBP_Parallax_A_UtilityDeviceB=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_utilitydevicec.KB3D_CBP_Parallax_A_UtilityDeviceC=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_utilitydeviced.KB3D_CBP_Parallax_A_UtilityDeviceD=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_parallax_a_utilitydevicee.KB3D_CBP_Parallax_A_UtilityDeviceE=1
+/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_VehicleDjVan_A.KB3D_CBD_VehicleDjVan_A=1
+/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgAbandonedRestaurant_A.KB3D_CBD_BldgLgAbandonedRestaurant_A=1
+/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgAlley_A.KB3D_CBD_BldgLgAlley_A=1
+/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgBikeStop_A.KB3D_CBD_BldgLgBikeStop_A=1
+/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgConvenienceStore_A.KB3D_CBD_BldgLgConvenienceStore_A=1
+/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgGameStore_A.KB3D_CBD_BldgLgGameStore_A=1
+/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgLibrary_A.KB3D_CBD_BldgLgLibrary_A=1
+/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgPCRepair_A.KB3D_CBD_BldgLgPCRepair_A=1
+/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgSaltySquid_A.KB3D_CBD_BldgLgSaltySquid_A=1
+/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgStreetApartment_A.KB3D_CBD_BldgLgStreetApartment_A=1
+/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgSmBusStop_A.KB3D_CBD_BldgSmBusStop_A=1
+/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropMattress_A.KB3D_CBD_PropMattress_A=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
