--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -280,7 +280,7 @@ UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inpu
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.远程编译选项,
 StaticMeshActor=PostProcessVolume.Lens.Lens
 KB3D_CBP_ACunit_D_C=PostProcessVolume.Lens.Lens
-SceneComponent=
+SceneComponent=PostProcessVolume.Lens.Lens
 PlayerStart=PostProcessVolume.Lens.Lens,
 CapsuleComponent=
 BP_Sky_Sphere_C=PostProcessVolume.Lens.Lens
@@ -290,6 +290,9 @@ KB3D_CBP_ACunit_B_C=PostProcessVolume.Lens.Lens,
 VolumetricCloud=PostProcessVolume.Lens.Lens
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/VRSpectator/Input/Actions/IA_VRSpectator_Look.IA_VRSpectator_Look,InputMappingContext.Mappings.ActionMappings./Game/VRSpectator/Input/Actions/IA_VRSpectator_Move.IA_VRSpectator_Move,InputMappingContext.Mappings.ActionMappings./Game/VRSpectator/Input/Actions/IA_VRSpectator_Toggle.IA_VRSpectator_Toggle,InputMappingContext.Mappings.ActionMappings./Game/VRSpectator/Input/Actions/IA_VRSpectator_FOV.IA_VRSpectator_FOV,InputMappingContext.Mappings.ActionMappings./Game/VRSpectator/Input/Actions/IA_VRSpectator_FOV_Reset.IA_VRSpectator_FOV_Reset
 InputAction=
+SkyLight=PostProcessVolume.Lens.Lens
+DatasmithSceneActor=PostProcessVolume.Lens.Lens
+DirectionalLight=PostProcessVolume.Lens.Lens
 
 [EditorStartup]
 LastLevel=/Game/cyberpunk
@@ -2261,7 +2264,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.722077429
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/VRSpectator/Input/Actions
+ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Maps
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -2294,6 +2297,9 @@ AssetManagementBrowser.HiddenColumns=Path
 AssetManagementBrowser.HiddenColumns=ItemDiskSize
 
 [PlacementMode]
+RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
+RecentlyPlaced=/Script/Engine.VolumetricCloud;/Engine/Transient.ActorFactoryVolumetricCloud_0
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Game/maerial/m_cyber_ground_Inst.m_cyber_ground_Inst;
 RecentlyPlaced=/Game/modi/cyberdistrict/2/Materials/KB3D_CBD_FloorIndustrialC.KB3D_CBD_FloorIndustrialC;
 RecentlyPlaced=/Game/modi/cyberdistrict/2/Materials/KB3D_CBD_RubberE.KB3D_CBD_RubberE;
@@ -2305,40 +2311,37 @@ RecentlyPlaced=/Game/Megascans/Surfaces/Rough_Asphalt_vlpqdf1/MI_Rough_Asphalt_v
 RecentlyPlaced=/Game/Megascans/Surfaces/Damaged_Asphalt_vizhdcz/MI_Damaged_Asphalt_vizhdcz_2K.MI_Damaged_Asphalt_vizhdcz_2K;
 RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acunit_b.KB3D_CBP_ACunit_B;
 RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acpd_a.KB3D_CBP_ACPD_A;
-RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
 RecentlyPlaced=/Script/Engine.PlanarReflection;/Engine/Transient.ActorFactoryPlanarReflection_0
 RecentlyPlaced=/Game/modi/1/actors/kb3d_cbp_therogue_a.KB3D_CBP_TheRogue_A;
 RecentlyPlaced=/Game/modi/1/actors/kb3d_cbp_residential_d.KB3D_CBP_Residential_D;
 RecentlyPlaced=/Game/modi/1/actors/kb3d_cbp_acunit_k.KB3D_CBP_ACunit_K;
 RecentlyPlaced=/Game/modi/1/actors/kb3d_cbp_acunit_a.KB3D_CBP_ACunit_A;
 RecentlyPlaced=/Game/modi/1/actors/kb3d_cbp_acpd_a.KB3D_CBP_ACPD_A;
-RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_19
-RecentlyPlaced=/Game/modi/1/actors/kb3d_cbp_acunit_d.KB3D_CBP_ACunit_D;
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LightingResults
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRSpectator/Input/Actions/IA_VRSpectator_FOV_Reset
-MRUItem1=/Game/VRSpectator/Input/IMC_VRSpectator
-MRUItem2=/Game/maerial/m_cyber_ground_Inst
-MRUItem3=/Game/maerial/Original/m_cyber_ground
-MRUItem4=/Game/maerial/Original/m_booth_roof
-MRUItem5=/Game/maerial/Original/m_ground
-MRUItem6=/Game/modi/cyberdistrict/2/Materials/KB3D_CBD_RubberE
-MRUItem7=/Game/Megascans/Surfaces/Damaged_Asphalt_vizhdcz/MI_Damaged_Asphalt_vizhdcz_2K
-MRUItem8=/Game/cyberpunk
-MRUItem9=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_Van
-MRUItem10=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_Turntable
-MRUItem11=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_Trash
-MRUItem12=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_SpeakerD
-MRUItem13=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_SpeakerC
-MRUItem14=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_SpeakerB
-MRUItem15=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_SpeakerA
-MRUItem16=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_RoofStructure
-MRUItem17=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_PowerGenerator
-MRUItem18=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_Monitor
-MRUItem19=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_Keyboard
+MRUItem0=/Game/cyberpunk
+MRUItem1=/Game/VRTemplate/Maps/VRTemplateMap
+MRUItem2=/Game/VRSpectator/Input/Actions/IA_VRSpectator_FOV_Reset
+MRUItem3=/Game/VRSpectator/Input/IMC_VRSpectator
+MRUItem4=/Game/maerial/m_cyber_ground_Inst
+MRUItem5=/Game/maerial/Original/m_cyber_ground
+MRUItem6=/Game/maerial/Original/m_booth_roof
+MRUItem7=/Game/maerial/Original/m_ground
+MRUItem8=/Game/modi/cyberdistrict/2/Materials/KB3D_CBD_RubberE
+MRUItem9=/Game/Megascans/Surfaces/Damaged_Asphalt_vizhdcz/MI_Damaged_Asphalt_vizhdcz_2K
+MRUItem10=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_Van
+MRUItem11=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_Turntable
+MRUItem12=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_Trash
+MRUItem13=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_SpeakerD
+MRUItem14=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_SpeakerC
+MRUItem15=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_SpeakerB
+MRUItem16=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_SpeakerA
+MRUItem17=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_RoofStructure
+MRUItem18=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_PowerGenerator
+MRUItem19=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_VehicleDjVan_A_Monitor
 
 [AssetEditorToolkitTabLocation]
 /Game/VRSpectator/VRSpectator.VRSpectator=1
